fixed question readability

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,6 +100,7 @@ div #questions {
 	color: #ffffff;
 	letter-spacing: 1.25px;
 	font-size: 28px;
+	width: 600px;
 }
 
 #choices1, #choices2, #choices3, #choices4  {
@@ -130,7 +131,7 @@ div #questions {
 	letter-spacing: 2px
 	padding: 20px;
 	margin: 15px;
-	width: 740px;
+	width: 600px;
 }
 
 #playerscore  {
